[project]
name = "png-hide-info"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "theocheng", email = "zlz_gty@foxmail.com" }
]
dependencies = [
    "stegano>=0.11.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"main" = "png_hide_info:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/png_hide_info"]
